--- a/book.tex
+++ b/book.tex
@@ -49,5 +49,7 @@
 \input{chapters/19_obzhora.tex}
 \newpage
 \input{chapters/20_haircut.tex}
+\newpage
+\input{chapters/21_ya_sam.tex}
 
 \end{document}
