--- a/book.tex
+++ b/book.tex
@@ -51,5 +51,7 @@
 \input{chapters/20_haircut.tex}
 \newpage
 \input{chapters/21_ya_sam.tex}
+\newpage
+\input{chapters/22_minecraft.tex}
 
 \end{document}
