--- a/book.tex
+++ b/book.tex
@@ -53,5 +53,13 @@
 \input{chapters/21_ya_sam.tex}
 \newpage
 \input{chapters/22_minecraft.tex}
+\newpage
+\input{chapters/23_bathhouse.tex}
+\newpage
+\input{chapters/24_basseyn.tex}
+\newpage
+\input{chapters/25_pirat.tex}
+\newpage
+\input{chapters/26_soplya.tex}
 
 \end{document}
