--- a/book.tex
+++ b/book.tex
@@ -61,5 +61,13 @@
 \input{chapters/25_pirat.tex}
 \newpage
 \input{chapters/26_soplya.tex}
+\newpage
+\input{chapters/27_computer.tex}
+\newpage
+\input{chapters/28_okno.tex}
+\newpage
+\input{chapters/29_costume.tex}
+\newpage
+\input{chapters/30_chihiro.tex}
 
 \end{document}
